register error bugs & layout bugs

--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -1,7 +1,7 @@
 
 body{
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     /* background-size: cover;
     background-position: center; */
 }
